  After copying the path name of a file, you can paste it in any folder to
  copy the file (Matthieu Casanova)
  
- When opening the search dialog if no text is selected the searched string will
  be filled with the previous entered string (feature #1500938) (Matthieu Casanova)
  
- The Activity Log option panel now have a textfield filter
  (feature #1593375) (Matthieu Casanova)
}}}
{{{ Editing

- SF Bug #1853797: perl syntax highlighting: broken '\' after var interpolation
  The rule for matching literals was wrongly highlighting perl variables.
  Fix is to use the same rule used in the main rule set to match those
  variables. (Marcelo Vanzin)

- Handling of /regexp/ in ruby mode is refined. (Kazutoshi Satoda)

  NOTE: If a regexp begins with a whitespace (including a newline), the
  beginning "/" is wrongly treated as a division operator. But such regexp
  is rare enough and one can use %r notations or write like "/\ ..." to
  force jEdit to treat it as a regexp.

- Added macro Files/Duplicate_Buffer.bsh
  It copies the current buffer in a new untitled buffer
  (Request #1849184) (Matthieu Casanova)

- Added macro Clipboard/Paste_Indent.bsh that paste and indent the clipboard
  (Request #1827083) (Matthieu Casanova)

- Improved auto indentation in Ruby edit mode. It now unindents things
  like else, end, require etc on the fly.
  (SF.net patch #1726646 - Jim Morris and Kazutoshi Satoda)

- Improved PHP edit mode (Daniel Hahler):
  - handle "${foo}" (SF Bug 1818619) and other valid expressions in literal,
    backticks and heredoc blocks
  - fix comment props for HTML in TAGS ruleset (C-e C-c/range-comment uses
    proper comment syntax there now)
  - fix delegating back from various rulesets (OBJECT_PHP, ...) to PHP
    ruleset; includes fixed handling of comments
  - fix matching of PHP vars (using SEQ_REGEXP instead of MATCH_FOLLOWING),
    so that it does not match "$foo\" completely; now uses the exact regexp
    for valid variable names